tests/NormalTests/paczka1/fuzzy1/33178175.err
Error in line 15: riezU A443 78,0
Error in line 39: y4SkdwNJH A443 217,23
